fixtures/corpus/invalid/typ-modifier-bad-value.rune
[TYP:min] quantity: number
    a numeric type whose min modifier is missing its value
